# console.cpp

./: .clang-format  .gitignore  CMakeLists.txt  NOTES.md
examples/: console.cpp  simple.cpp  simple.h
include/: console.h
src/: console.cpp
